spacing issue correct

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #0E2625;
+  overflow-x: none;
 }
 
 ::-webkit-scrollbar {
@@ -93,6 +94,12 @@ p {
   position: relative;
   bottom: 97px;
   z-index: 10;
+}
+.hero-heading{
+ font-size: 64px !important;
+}
+.herosubhead{
+  font-size: 35px !important;
 }
 
 .highlight {
@@ -709,6 +716,13 @@ input[type="time"] {
     padding: 40px 27px;
     width: 100%;
 }
+.hero-heading{
+ font-size: 44px !important;
+ width: 80%;
+}
+.herosubhead{
+  font-size: 35px !important;
+}
 
 
   .about-img {
@@ -827,22 +841,25 @@ input[type="time"] {
 
 }
 
-@media (max-width: 576px) {
-
-  h1,
+@media (min-width: 580px) and (max-width: 767px) {
+    h1,
   h2,
   h3,
   h4,
   h5 {
-    font-size: 40px !important;
+    font-size: 35px !important;
+  }
+  .navbar-custom {
+    padding-top: 2rem !important;
+    padding-bottom: 3rem !important;
+}
+
+  .navbar-custom .navbar-toggler {
+    border: none !important;
+    box-shadow: none !important;
   }
 
- .slider-img {
-    height: 450px;
-    object-fit: cover;
-  }
-
-  .navbar {
+    .navbar {
     background-color: #0E2625;
     z-index: 50;
   }
@@ -878,7 +895,227 @@ input[type="time"] {
     border-radius: 2px;
 }
 
-/* when menu is open (bootstrap adds .collapsed FALSE state) */
+.navbar-toggler:not(.collapsed) span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(2) {
+    opacity: 0;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
+}
+
+  .navbar-toggler:focus {
+    box-shadow: none !important;
+  }
+  button.custom-toggler.navbar-toggler.collapsed {
+    border: 2px solid #ffd28d !important;
+}
+
+  .col-custom-space {
+    padding-left: 30px !important;
+  }
+
+  .custom-space {
+    align-items: center;
+    padding: 40px 27px;
+    width: 100%;
+}
+
+  .about-img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+  }
+
+  .food-img {
+    height: 550px !important;
+  }
+
+  .food2-img {
+    height: 450px !important  ;
+    object-fit: contain;
+}
+p.text-white.text-center.mx-auto {
+    padding: 0 71px;
+}
+  .food-cnt {
+    padding-right: 0px !important;
+    text-align: right;
+  }
+
+  .stars-col {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .foot-nav a {
+    margin-right: 25px;
+  }
+
+  .footer-simple {
+    padding: 50px 20px 40px 20px;
+  }
+  .foot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* Testimonial Responsive Styling */
+
+  .mySwiper .swiper-slide {
+    padding: 20px 0;
+  }
+
+  .mySwiper .swiper-pagination {
+    bottom: 0 !important;
+    margin-top: 20px;
+  }
+
+  /* Dots Styling */
+  .mySwiper .swiper-pagination-bullet {
+    background-color: #ffeaa7;
+    /* Light Yellow */
+    width: 11px;
+    height: 11px;
+    opacity: 0.6;
+  }
+
+  .mySwiper .swiper-pagination-bullet-active {
+    background-color: #0A1F1E;
+    /* Dark Color */
+    width: 13px;
+    height: 13px;
+    opacity: 1;
+  }
+ 
+  .menu-title {
+    font-size: 2.7rem;
+  }
+  
+  .menu-tab {
+    padding: 12px 20px !important;
+    font-size: 1rem !important;
+}
+a.menu-tab.nav-link {
+    border: 2px solid #ffff;
+    border-radius: 0px;
+    color: #fff;
+    padding: 12px 15px;
+    margin-right: 0;
+}
+  
+  .menu-name {
+    font-size: 1.2rem;
+  }
+  
+  .menu-price {
+    font-size: 1.3rem;
+  }
+.menu-name {
+    font-size: 1.2rem !important;
+}
+.menu-divider {
+    position: absolute;
+    left: 59%;
+    top: 13px;
+    background-color: #FFD28D;
+    width: 18%;
+    height: 1px;
+}
+.menu-divider2 {
+    position: absolute;
+    left: 59%;
+    top: 18px;
+    background-color: #FFD28D;
+    width: 18%;
+    height: 1px;
+}
+
+  .reservation-form {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+   .left-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 130px;
+    height: 100%;
+}
+.right-overlay {
+    right: 0;
+    width: 130px;
+}   
+.contact-img {
+  width: 100%;
+  object-fit: cover;
+  height: 650px;
+  margin-bottom: 50px;
+}
+
+
+}
+
+@media (max-width: 579px) {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-size: 40px !important;
+  }
+
+ .slider-img {
+    height: 450px;
+    object-fit: cover;
+  }
+
+  .navbar {
+    background-color: #0E2625;
+    z-index: 50;
+  }
+.navbar-custom {
+    padding-top: 2rem !important;
+    padding-bottom: 3rem !important;
+}
+
+/* Square border */
+.custom-toggler {
+    border: 2px solid ffd28d !important;
+    padding: 10px;
+    border-radius: 4px;
+    position: relative;
+    width: 45px;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    background: transparent;
+}
+
+/* remove bootstrap default icon */
+.custom-toggler .navbar-toggler-icon {
+    display: none;
+}
+
+/* 3 lines */
+.custom-toggler span {
+    width: 22px;
+    height: 2px;
+    background-color: #ffd28d;
+    transition: all 0.3s ease;
+    border-radius: 2px;
+}
+
 .navbar-toggler:not(.collapsed) span:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
 }
@@ -941,6 +1178,14 @@ input[type="time"] {
     font-size: 1.8rem !important;
   }
 
+  a.menu-tab.nav-link {
+    border: 2px solid #ffff;
+    border-radius: 0px;
+    color: #fff;
+    padding: 12px 15px;
+    margin-right: 0;
+}
+
   .mySwiper p {
     font-size: 17px !important;
   }
@@ -976,20 +1221,20 @@ input[type="time"] {
     padding: 50px 20px 40px 20px;
   }
 
-  .footer-simple h6,
-  p {
-    text-align: left;
+    .foot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .footer-simple hr {
     margin-left: 0;
   }
-  .logo-slider-img {
-  width: 50%;
-  margin: 0;
-  padding: 0;
-  object-fit: cover;
-}
+ .logo-slider-img {
+    max-height: 105px;
+    width: 100%;
+  }
 .menu-item {
     flex-direction: column;
     align-items: flex-start;
@@ -997,7 +1242,7 @@ input[type="time"] {
   }
   
   .menu-right {
-    text-align: left;
+    text-align: center;
     min-width: auto;
   }
 
@@ -1072,6 +1317,9 @@ input[type="time"] {
     background-color: #FFD28D;
     width: 16%;
     height: 1px;
+}
+.timedate-sec{
+  row-gap: 6px !important;
 }
 
 
